# DQ-Android-Labs

./: .gitignore  README.md  build.gradle  copy_api_versions.sh  dependence.txt  gradle.properties  linemap-old.txt  linemap.txt  settings.gradle
DusanPlugin/: build.gradle
DusanPlugin/src/main/groovy/duqian/: TestPlugin.groovy
app/: .gitignore  build.gradle  coverage.ec  duqian.gradle  filter.txt  jacoco.gradle  linemap.txt  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/res/layout/: activity_main.xml  content_main.xml
app/src/main/res/menu/: menu_main.xml
app/src/main/res/values/: attrs_progress_view.xml  colors.xml  strings.xml  styles.xml
dynamic_feature/: build.gradle
dynamic_feature/src/main/: AndroidManifest.xml
flutter_module/: .gitignore  .metadata  README.md  pubspec.yaml
flutter_module/.android/Flutter/: build.gradle
flutter_module/.android/app/: build.gradle
flutter_module/.ios/Flutter/: Generated.xcconfig  flutter_export_environment.sh
flutter_module/.ios/Runner.xcodeproj/: project.pbxproj
flutter_module/lib/: DQFlutterPage.dart  main.dart
gifplayer/: .gitignore  build.gradle
gifplayer/src/main/: AndroidManifest.xml
gifplayer/src/main/cpp/: CMakeLists.txt  gif_err.c  gif_lib.h  native-lib.cpp
gifplayer/src/main/js/: Hook.js  ReadMe.md  ctf.py
gradle/wrapper/: gradle-wrapper.properties
release-app/: soloader-release.apk
soloader/: .gitignore  CMakeLists.txt  build.gradle  proguard-rules.pro
soloader/release/: soloader.aab
soloader/src/main/: AndroidManifest.xml
soloader/src/main/jni/: sostub.cpp
(+64 files in other folders)
